--- a/projet.html
+++ b/projet.html
@@ -1,21 +1,33 @@
 <html>
 
 <head>
-    <title>BR architects</title>
+    <style>
+
+    </style>
+    <link rel="stylesheet" href="projet.css">
 </head>
 
 <body>
     <div class="logo">
-        <b>Br</b> architects
-        
+        <p { font-family: " Segoe UI" }></p><b>BR    </b> Architects
+        </p>
     </div>
-    <div>
-        <ul class="same">
-            <li>Projects</li>
-            <li>About</li>
-            <li>Contact</li>
+    <div class="same">
+        <ul>
+            <li id="a"><a href="#">Projects</a></li>
+            <li id="b"><a href="#">About</a></li>
+            <li id="c"><a href="#">Contact</a></li>
         </ul>
     </div>
+    <div class="container"> <!--i couldnt find the right font i tried Verdana n 
+    Segoe UI but in vain -->
+            <div class="wlc">
+                <img src="ph/architect.jpg" alt="bg" />
+                <h2 class="heading" ><b> BR </b> </h2>
+                <h2 class="headingg">Architects</h2>
+            </div>
+    </div>
+
 
 
 </body>
