--- a/projet.html
+++ b/projet.html
@@ -27,7 +27,11 @@
                 <h2 class="headingg">Architects</h2>
             </div>
     </div>
-
+    
+<h2> <div class ="projects"></div>Projects</h2>     
+<hr div class="h">   
+    </div>
+    
 
 
 </body>
