--- a/projet.html
+++ b/projet.html
@@ -32,7 +32,14 @@
 <hr div class="h">   
     </div>
     
+<div class="first">
+    <img src="ph/house1.jpg" width="300px" alt="bg" />
+    <img src="ph/house2.jpg" width="300px" alt="bg" />
+    <img src="ph/house3.jpg" width="300px" alt="bg" />
+    <img src="ph/house4.jpg" width="300px" alt="bg" />
 
+  
+</div>
 
 </body>
 
