--- a/projet.html
+++ b/projet.html
@@ -33,13 +33,23 @@
     </div>
     
 <div class="first">
-    <img src="ph/house1.jpg" width="300px" alt="bg" />
-    <img src="ph/house2.jpg" width="300px" alt="bg" />
-    <img src="ph/house3.jpg" width="300px" alt="bg" />
-    <img src="ph/house4.jpg" width="300px" alt="bg" />
+    <img src="ph/house1.jpg" width="330px" alt="bg" />
+    <img src="ph/house2.jpg" width="330px" alt="bg" />
+    <img src="ph/house3.jpg" width="330px" alt="bg" />
+    <img src="ph/house4.jpg" width="330px" alt="bg" />
 
   
 </div>
+<div class="second">
+    <img src="ph/house5.jpg" width="330px" alt="bg" />
+    <img src="ph/house6.jpg" width="330px" alt="bg" />
+    <img src="ph/house7.jpg" width="330px" alt="bg" />
+    <img src="ph/house8.jpg" width="330px" alt="bg" />
+
+  
+</div>
+<hr div class="h">   
+
 
 </body>
 
