--- a/projet.html
+++ b/projet.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="logo">
-        <p { font-family: " Segoe UI" }></p><b>BR    </b> Architects
+        <p { font-family: " Segoe UI" }></p><b>BR </b> Architects
         </p>
     </div>
     <div class="same">
@@ -19,36 +19,69 @@
             <li id="c"><a href="#">Contact</a></li>
         </ul>
     </div>
-    <div class="container"> <!--i couldnt find the right font i tried Verdana n 
+    <div class="container">
+        <!--i couldnt find the right font i tried Verdana n 
     Segoe UI but in vain -->
-            <div class="wlc">
-                <img src="ph/architect.jpg" alt="bg" />
-                <h2 class="heading" ><b> BR </b> </h2>
-                <h2 class="headingg">Architects</h2>
-            </div>
+        <div class="wlc">
+            <img src="ph/architect.jpg" alt="bg" />
+            <h2 class="heading"><b> BR </b> </h2>
+            <h2 class="headingg">Architects</h2>
+        </div>
     </div>
-    
-<h2> <div class ="projects"></div>Projects</h2>     
-<hr div class="h">   
+
+    <h2>
+        <div class="projects"></div>Projects
+    </h2>
+    <hr div class="h">
     </div>
-    
-<div class="first">
-    <img src="ph/house1.jpg" width="330px" alt="bg" />
-    <img src="ph/house2.jpg" width="330px" alt="bg" />
-    <img src="ph/house3.jpg" width="330px" alt="bg" />
-    <img src="ph/house4.jpg" width="330px" alt="bg" />
 
-  
-</div>
-<div class="second">
-    <img src="ph/house5.jpg" width="330px" alt="bg" />
-    <img src="ph/house6.jpg" width="330px" alt="bg" />
-    <img src="ph/house7.jpg" width="330px" alt="bg" />
-    <img src="ph/house8.jpg" width="330px" alt="bg" />
+    <div class="first">
+        <img src="ph/house1.jpg" width="310px" alt="bg" />
+        <img src="ph/house2.jpg" width="310px" alt="bg" />
+        <img src="ph/house3.jpg" width="310px" alt="bg" />
+        <img src="ph/house4.jpg" width="310px" alt="bg" />
 
-  
-</div>
-<hr div class="h">   
+
+    </div>
+    <div class="second">
+        <img src="ph/house5.jpg" width="310px" alt="bg" />
+        <img src="ph/house6.jpg" width="310px" alt="bg" />
+        <img src="ph/house7.jpg" width="310px" alt="bg" />
+        <img src="ph/house8.jpg" width="310px" alt="bg" />
+
+
+    </div>
+    <h2>
+        <div class="projects"></div>About
+    </h2>
+    <hr div class="h">
+    </div>
+
+    <div class="word">
+        <h5>Summer House</h5>
+    </div>
+    <div class="wordd">
+        <h5>Brick House</h5>
+    </div>
+    <div class="worddd">
+        <h5>Renovated</h5>
+    </div>
+    <div class="wordddd">
+        <h5>Bam House</h5>
+    </div>
+    <div class="word1">
+        <h5>Summer House</h5>
+    </div>
+    <div class="word2">
+        <h5>Brick House</h5>
+    </div>
+    <div class="word3">
+        <h5>Renovated</h5>
+    </div>
+    <div class="word4">
+        <h5>Bam House</h5>
+    </div>
+
 
 
 </body>
