--- a/projet.html
+++ b/projet.html
@@ -69,6 +69,7 @@
     <div class="wordddd">
         <h5>Bam House</h5>
     </div>
+
     <div class="word1">
         <h5>Summer House</h5>
     </div>
@@ -81,9 +82,20 @@
     <div class="word4">
         <h5>Bam House</h5>
     </div>
-
-
-
+    <div class="lorem">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro in accusantium mollitia quia, nostrum suscipit
+            hic, totam corrupti expedita dolor distinctio odit explicabo. Labore, quia ea ullam atque voluptates
+            asperiores?
+            Incidunt dolores corporis hic sit modi dicta tempore facere perspiciatis dignissimos fugit vel numquam nobis
+            soluta blanditiis perferendis aperiam maxime nesciunt, ipsum, voluptate exercitationem quaerat eius.
+            Adipisci doloremque eum laborum!
+            Eaque, aperiam voluptatem. Sunt non optio recusandae, animi laudantium accusamus praesentium et aliquam iure
+            perferendis doloribus fuga rem temporibus ea distinctio totam natus autem corporis vitae commodi facilis
+            maxime modi?
+            Dolorum deserunt quidem vitae qui, veniam molestiae quisquam porro corrupti perspiciatis aspernatur. Ex aut
+            molestias in? Quia voluptatem minus, est numquam cum culpa? Deleniti, est odit aperiam eligendi quis nulla.
+        </p>
+    </div>
 </body>
 
 </html>
