--- a/projet.html
+++ b/projet.html
@@ -96,6 +96,57 @@
             molestias in? Quia voluptatem minus, est numquam cum culpa? Deleniti, est odit aperiam eligendi quis nulla.
         </p>
     </div>
+    <div class="div">
+        <img src="ph/john_doe.jpg" width="310px" alt="bg" />
+        <center>
+<h2>John Doe</h2> 
+<h5>CEO AND Founder</h5> </center>
+<h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, sequi voluptates fugit facere commodi pariatur quo earum nostrum hic at aut, inventore quisquam autem excepturi animi soluta, incidunt aperiam similique.</h5>
+ </div>
+ <div class="div2">
+    <img src="ph/jane_ross.jpg" width="310px" alt="bg" />
+    <center>
+<h2>Jane Ross</h2> 
+<h5>Architect</h5> </center>
+<h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, sequi voluptates fugit facere commodi pariatur quo earum nostrum hic at aut, inventore quisquam autem excepturi animi soluta, incidunt aperiam similique.</h5>
+</div>
+<div class="div3">
+    <img src="ph/mike_ross.jpg" width="310px" alt="bg" />
+    <center>
+<h2>Mike Ross</h2> 
+<h5>Architect</h5> </center>
+<h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, sequi voluptates fugit facere commodi pariatur quo earum nostrum hic at aut, inventore quisquam autem excepturi animi soluta, incidunt aperiam similique.</h5>
+</div>
+<div class="div4">
+    <img src="ph/dan_star.jpg" width="310px" alt="bg" />
+    <center>
+<h2>Dan Star</h2> 
+<h5>Architect</h5> </center>
+<h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, sequi voluptates fugit facere commodi pariatur quo earum nostrum hic at aut, inventore quisquam autem excepturi animi soluta, incidunt aperiam similique.</h5>
+</div>
+
+<div class="contact-section">
+    <h1>Contact</h1> <div class="border"></div>
+</h2>
+<hr div class="h">
+</div>
+<h5>Let's get in contact and talk about your next project</h5>
+    <from class"contact-form" action="index.html mehtod="post>
+        <div class="t"><input type ="name" class="contact-form-text" placeholder="Name"></div>
+        <div class="x">  <input type ="email" class="contact-form-text" placeholder="Email"></div>
+        <div class="y"> <input type ="subject" class="contact-form-text" placeholder="Subject"></div>
+        <div class="w"> <input type ="comment" class="contact-form-text" placeholder="Comment"></div>
+<input type="submit" class="contact-from-btn" value="Send message">
+
+
+    </from>
+
+</div>
+<div class ="map">
+
+
+<img src="ph/map.jpg" width="1300px" alt="bg" />
+</div>
 </body>
 
 </html>
